css: Prevent wrapping of vote stats tables when vote count > 1000
Looks like there wasn't enough room in the vote graph for four-digit
vote counts.

--- a/data/style.css
+++ b/data/style.css
@@ -382,7 +382,7 @@ div#vntags                    { margin: 15px 30px 0 30px; border-top: 1px solid 
 
 /***** Vote stats ****/
 
-.votestats           { width: 610px; margin: 0 auto; }
+.votestats           { width: 620px; margin: 0 auto; }
 .votegraph           { float: left; margin-right: 20px }
 .votegraph td        { padding: 0 2px; }
 .votegraph td.number { text-align: right }
